--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,8 +20,7 @@ for:
         - master
 
     after_test:
-      - ps: Rename-Item -Path "/core/build/libs/*.jar" -NewName "DynamicMusic $($env:my_version_number).jar"
-
+      - ps: Rename-Item -LiteralPath core\build\libs\core-1.0.jar -NewName "DynamicMusic $($env:my_version_number).jar"
     artifacts:
       - path: /core/build/libs/*.jar
         name: jar
