--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 ﻿environment:
-  my_version_number: 1.0
+  my_version_number: 1.1 # ALSO CHANGE IN BUILD.GRADLE
 
 version: $(my_version_number).{build}
 
@@ -20,7 +20,7 @@ for:
         - master
 
     after_build:
-      - ps: Rename-Item -LiteralPath core\build\libs\core-1.0.jar -NewName "DynamicMusic $($env:my_version_number).jar"
+      - ps: Rename-Item -LiteralPath core\build\libs\core-1.0.jar -NewName "DynamicMusic-$($env:my_version_number).jar"
 
     artifacts:
       - path: /core/build/libs/*.jar
